# worker-ext-worktree

./: .gitignore  README.md  pyproject.toml
src/worker_ext_worktree/: __init__.py  extension.py  service.py
tests/: test_integration.py  test_service.py
