[project]
name = "worker-ext-worktree"
version = "0.1.0"
description = "Git worktree slash commands for Worker"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "worker-core",
]

[project.entry-points."worker.extensions"]
wt = "worker_ext_worktree:WorktreeExtension"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worker_ext_worktree"]

[tool.uv.sources]
worker-core = { path = "../worker/packages/worker-core", editable = true }
worker-ai = { path = "../worker/packages/worker-ai", editable = true }

[tool.uv.pip]
no-sources = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
